First commit of Jenn's portion of the Bubl app

--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <title>Bubl</title>
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Snippet"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="index.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Snippet&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
     <body>
       <header>
         <img class="logo" src="images/logo.png" alt="Bubl" />
@@ -26,5 +21,14 @@
         </nav>
       </header>
     </body>
-  </head>
+ 
+  <footer>
+      <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="pricing.html">Pricing</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+    <p>&copy; Carmen Salley &amp; Jennifer Hott</p>
+  </footer>
 </html>
