--- a/about.html
+++ b/about.html
@@ -6,16 +6,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <title>Bubl</title>
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Snippet"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="index.css" />
-
-    <body>
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Snippet&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+   
+        <script defer="defer" src="javascript/accordian.js"></script>
       <header>
         <img class="logo" src="images/logo.png" alt="Bubl" />
         <nav>
@@ -25,6 +21,85 @@
           <a href="contact.html">Contact</a>
         </nav>
       </header>
+      <body>
+      <section class="main">
+      <div class="accordian">
+        <div class="panel">
+          <div class="panel-bar">
+      <h1 class="aboutHeader">About Us</h1>
+      <div class="panel-buttons">
+        <button class="panel-open">Open</button>
+        <button class="panel-close hide">Close</button>
+
+      </div>
+    </div>
+    <div class="panel-content">
+      <div class="panel-layout">
+      <div class="left">
+      <p>Cat ipsum dolor sit amet, skid on floor, crash into wall and lick butt, poop in litter box, scratch the walls, cats making all the muffins. Munch on tasty moths ask to go outside and ask to come inside and ask to go outside and ask to come inside and pee in human's bed until he cleans the litter box run around the house at 4 in the morning sit in box lick sellotape but purr while eating. Meow ignore the human until she needs to get up, then climb on her lap and sprawl or stare out cat door then go back inside sleep. More napping, more napping all the napping is exhausting. Sleeps on my head rub face on owner a nice warm laptop for me to sit on, so suddenly go on wild-eyed crazy rampage mewl for food at 4am yet wake up wander around the house making large amounts of noise jump on top of your human's bed and fall asleep again spill litter box, scratch at owner, destroy all furniture, especially couch. Curl into a furry donut relentlessly pursues moth. Lay on arms while you're using the keyboard man running from cops stops to pet cats, goes to jail, for eat owner's food yet hunt by meowing loudly at 5am next to human slave food dispenser if human is on laptop sit on the keyboard so 𝕄𝔼𝕆𝕎 stare at owner accusingly then wink. Meoooow lie in the sink all day for have secret plans i is not fat, i is fluffy there's a forty year old lady there let us feast but cat sit like bread. Refuse to drink water except out of someone's glass. </p>
+    </div>
+    <div class="right">
+      <p>Scared by doggo also cucumerro side-eyes your "jerk" other hand while being petted yet humans,humans, humans oh how much they love us felines we are the center of attention they feed, they clean and eat owner's food for meow meow, i tell my human. Lay on arms while you're using the keyboard. This cat happen now, it was too purr-fect!!! snuggles up to shoulders or knees and purrs you to sleep so plan steps for world domination. Catto munch salmono carefully drink from water glass and then spill it everywhere and proceed to lick the puddle going to catch the red dot today going to catch the red dot today or i like big cats and i can not lie. Lick left leg for ninety minutes, still dirty shake treat bag kitty kitty crash against wall but walk away like nothing happened. Pee in human's bed until he cleans the litter box meow go back to sleep owner brings food and water tries to pet on head, so scratch get sprayed by water because bad cat throw down all the stuff in the kitchen check cat door for ambush 10 times before coming in. Experiences short bursts of poo-phoria after going to the loo purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table.</p>
+    </div>
+      </div>
+    </div>
+    </div>
+    <div class="panel">
+        <div class="panel-bar">
+    <h1 class="aboutHeader">Our Philosophy</h1>
+    <div class="panel-buttons">
+      <button class="panel-open">Open</button>
+      <button class="panel-close hide">Close</button>
+
+    </div>
+  </div>
+  <div class="panel-content">
+      <div class="panel-layout">
+          <div class="left">
+          <p>Cat ipsum dolor sit amet, skid on floor, crash into wall and lick butt, poop in litter box, scratch the walls, cats making all the muffins. Munch on tasty moths ask to go outside and ask to come inside and ask to go outside and ask to come inside and pee in human's bed until he cleans the litter box run around the house at 4 in the morning sit in box lick sellotape but purr while eating. Meow ignore the human until she needs to get up, then climb on her lap and sprawl or stare out cat door then go back inside sleep. More napping, more napping all the napping is exhausting. Sleeps on my head rub face on owner a nice warm laptop for me to sit on, so suddenly go on wild-eyed crazy rampage mewl for food at 4am yet wake up wander around the house making large amounts of noise jump on top of your human's bed and fall asleep again spill litter box, scratch at owner, destroy all furniture, especially couch. Curl into a furry donut relentlessly pursues moth. Lay on arms while you're using the keyboard man running from cops stops to pet cats, goes to jail, for eat owner's food yet hunt by meowing loudly at 5am next to human slave food dispenser if human is on laptop sit on the keyboard so 𝕄𝔼𝕆𝕎 stare at owner accusingly then wink. Meoooow lie in the sink all day for have secret plans i is not fat, i is fluffy there's a forty year old lady there let us feast but cat sit like bread. Refuse to drink water except out of someone's glass. </p>
+        </div>
+        <div class="right">
+          <p>Scared by doggo also cucumerro side-eyes your "jerk" other hand while being petted yet humans,humans, humans oh how much they love us felines we are the center of attention they feed, they clean and eat owner's food for meow meow, i tell my human. Lay on arms while you're using the keyboard. This cat happen now, it was too purr-fect!!! snuggles up to shoulders or knees and purrs you to sleep so plan steps for world domination. Catto munch salmono carefully drink from water glass and then spill it everywhere and proceed to lick the puddle going to catch the red dot today going to catch the red dot today or i like big cats and i can not lie. Lick left leg for ninety minutes, still dirty shake treat bag kitty kitty crash against wall but walk away like nothing happened. Pee in human's bed until he cleans the litter box meow go back to sleep owner brings food and water tries to pet on head, so scratch get sprayed by water because bad cat throw down all the stuff in the kitchen check cat door for ambush 10 times before coming in. Experiences short bursts of poo-phoria after going to the loo purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table.</p>
+        </div>
+          </div>
+        </div>
+        </div>
+  <div class="panel">
+      <div class="panel-bar">
+  <h1 class="aboutHeader">Meet The Team</h1>
+  <div class="panel-buttons">
+    <button class="panel-open">Open</button>
+    <button class="panel-close hide">Close</button>
+
+  </div>
+</div>
+<div class="panel-content">
+    <div class="panel-layout">
+        <div class="left">
+          <h4>Carmen</h4>
+          <img src="images/carmen.jpg" class="aboutImages">
+        <p>Cat ipsum dolor sit amet, skid on floor, crash into wall and lick butt, poop in litter box, scratch the walls, cats making all the muffins. Munch on tasty moths ask to go outside and ask to come inside and ask to go outside and ask to come inside and pee in human's bed until he cleans the litter box run around the house at 4 in the morning sit in box lick sellotape but purr while eating. Meow ignore the human until she needs to get up, then climb on her lap and sprawl or stare out cat door then go back inside sleep. More napping, more napping all the napping is exhausting. Sleeps on my head rub face on owner a nice warm laptop for me to sit on, so suddenly go on wild-eyed crazy rampage mewl for food at 4am yet wake up wander around the house making large amounts of noise jump on top of your human's bed and fall asleep again spill litter box, scratch at owner, destroy all furniture, especially couch. Curl into a furry donut relentlessly pursues moth. Lay on arms while you're using the keyboard man running from cops stops to pet cats, goes to jail, for eat owner's food yet hunt by meowing loudly at 5am next to human slave food dispenser if human is on laptop sit on the keyboard so 𝕄𝔼𝕆𝕎 stare at owner accusingly then wink. Meoooow lie in the sink all day for have secret plans i is not fat, i is fluffy there's a forty year old lady there let us feast but cat sit like bread. Refuse to drink water except out of someone's glass. </p>
+      </div>
+      <div class="right">
+        <h4>Jenn</h4>
+        <img src="images/jenn.jpg" class="aboutImages">
+        <p>Scared by doggo also cucumerro side-eyes your "jerk" other hand while being petted yet humans,humans, humans oh how much they love us felines we are the center of attention they feed, they clean and eat owner's food for meow meow, i tell my human. Lay on arms while you're using the keyboard. This cat happen now, it was too purr-fect!!! snuggles up to shoulders or knees and purrs you to sleep so plan steps for world domination. Catto munch salmono carefully drink from water glass and then spill it everywhere and proceed to lick the puddle going to catch the red dot today going to catch the red dot today or i like big cats and i can not lie. Lick left leg for ninety minutes, still dirty shake treat bag kitty kitty crash against wall but walk away like nothing happened. Pee in human's bed until he cleans the litter box meow go back to sleep owner brings food and water tries to pet on head, so scratch get sprayed by water because bad cat throw down all the stuff in the kitchen check cat door for ambush 10 times before coming in. Experiences short bursts of poo-phoria after going to the loo purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table.</p>
+      </div>
+        </div>
+      </div>
+      </div>
+
+      
+            </section>
     </body>
-  </head>
+ 
+  <footer>
+      <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="pricing.html">Pricing</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+    <p>&copy; Carmen Salley &amp; Jennifer Hott</p>
+  </footer>
 </html>
