uploading merged files

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <meta name = "viewport" content = "width=device-width, intial-scale=1.0">
     <title>Bubl</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Snippet"
-      rel="stylesheet"
-      
-    />
+  
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Snippet&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/index.css" />
     <script src="index.js" async></script>
     <script src="slideshow.js" async></script>
@@ -55,4 +53,13 @@
 </div>
     </body>
   </head>
+  <footer>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+  <p>&copy; Carmen Salley &amp; Jennifer Hott</p>
+</footer>
 </html>
