--- a/about.html
+++ b/about.html
@@ -6,17 +6,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name = "viewport" content = "width=device-width, intial-scale=1.0">
     <title>Bubl</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Snippet&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css" />
+    <script src="index.js" async></script>
   </head>
    
         <script defer="defer" src="javascript/accordian.js"></script>
       <header>
-        <img class="logo" src="images/logo.png" alt="Bubl" />
+        <!--<img class="logo" src="images/logo.png" alt="Bubl" />-->
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
+          <img class="logo" src="images/logo.png" alt="Bubl" />
           <a href="pricing.html">Pricing</a>
           <a href="contact.html">Contact</a>
         </nav>
