--- a/contact.html
+++ b/contact.html
@@ -55,4 +55,13 @@
       </div>
     </body>
   </head>
+  <footer>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+  <p>&copy; Carmen Salley &amp; Jennifer Hott</p>
+</footer>
 </html>
