--- a/about.html
+++ b/about.html
@@ -8,15 +8,16 @@
     <meta charset="utf-8" />
     <meta name = "viewport" content = "width=device-width, intial-scale=1.0">
     <title>Bubl</title>
+
+  
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Snippet&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/index.css" />
     <script src="index.js" async></script>
   </head>
-   
-        <script defer="defer" src="javascript/accordian.js"></script>
+
       <header>
-        <!--<img class="logo" src="images/logo.png" alt="Bubl" />-->
-        <nav>
+        <nav class="navContainer">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <img class="logo" src="images/logo.png" alt="Bubl" />
@@ -25,6 +26,16 @@
         </nav>
       </header>
       <body>
+          <div class="about-content">
+              <div class="tc-left"
+              <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse, cricket bat max brucks terribilem incessu zomby. The voodoo sacerdos flesh eater, suscitat mortuos comedere carnem virus. Zonbi tattered for solum oculi eorum defunctis go lum cerebro.</p>
+              </div>
+             <div class="tc-right">
+             <p>Nigh tofth eliv ingdead. Horribilem walking dead resurgere de crazed sepulcris creaturis, zombie sicut de grave feeding iride et serpens. Pestilentia, shaun ofthe dead scythe animated corpses ipsa screams. Pestilentia est plague haec decaying ambulabat mortuos. Sicut zeder apathetic malus voodoo. Aenean a dolor plan et terror soulless vulnerum contagium accedunt, mortui iam vivam unlife. Qui tardius moveri, brid eof reanimator sed in magna copia sint terribiles undeath legionis. Alii missing oculis aliorum sicut serpere crabs nostram. Putridi braindead odores kill and infect, aere implent left four dead.  
+               </p>
+             </div>
+             </div>
+        <script src="javascript/accordian.js" async></script>
       <section class="main">
       <div class="accordian">
         <div class="panel">
@@ -36,6 +47,7 @@
 
       </div>
     </div>
+    
     <div class="panel-content">
       <div class="panel-layout">
       <div class="left">
