--- a/pricing.html
+++ b/pricing.html
@@ -8,14 +8,16 @@
     <meta charset="utf-8" />
     <meta name = "viewport" content = "width=device-width, intial-scale=1.0">
     <title>Bubl</title>
+
+  
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Snippet&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/index.css" />
     <script src="index.js" async></script>
   </head>
-    
+
       <header>
-        <!--<img class="logo" src="images/logo.png" alt="Bubl" />-->
-        <nav>
+        <nav class="navContainer">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <img class="logo" src="images/logo.png" alt="Bubl" />
