--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,17 @@
           <a href="pricing.html">Pricing</a>
           <a href="contact.html">Contact</a>
         </nav>
+          <!-- mobile code for nav -->
+          <nav class="mobileNav">
+            <ul class="list">
+              <a href="index.html"><li>Home</li></a>
+              <a href="about.html"><li>About</li></a>
+              <a href="pricing.html"><li>Pricing</li></a>
+              <a href="contact.html"><li>Contact</li></a>
+
+            </ul>
+          </div>
+        </nav>
       </header>
 <body>
       <div class="containerform">
